--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       font-family: 'Open Sans', sans-serif;
     }
   </style>
-  <title>React App</title>
+  <title>Todo</title>
 </head>
 
 <body>
